Vertically align things correctly

--- a/www/users/{user}/pipe/style.css
+++ b/www/users/{user}/pipe/style.css
@@ -37,6 +37,9 @@
 	line-height: 48px;
 	font-size: 16px;
 	padding: 0 0.25em;
+	& > .label {
+		vertical-align: middle;
+	}
 	& > button {
 		width: 32px;
 		height: 32px;
@@ -44,6 +47,9 @@
 }
 #viewHead {
 	font-size: 24px;
+	& > button {
+		vertical-align: baseline;
+	}
 }
 #nameHead {
 	width: 55%;
